--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -9,6 +9,7 @@
     </div>
   </div>
   <div class="totals">
+    <button class="place-btn" routerLink="/loginform">PLACE ORDER</button>
     <p>Total: {{ total | currency }}</p>
-  </div>
+  </div>  
 </div>
