--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="product-list">
-    <div *ngFor="let product of products" class="product-card">
+    <div *ngFor="let product of filteredProducts" class="product-card">
       <img [src]="product.image" alt="{{ product.title }}">
       <h3>{{ product.title }}</h3>
       <p>Price: {{ product.price | currency }}</p>
